# SettlersMyth

./: .gitignore  CMakeLists.txt  Icons.xcf  IconsResources.xcf  README.md  build.bash  premake5.lua  smconfig.ini
blueprints/: BasicBuildings.smd  BuildingsFood.smd  BuildingsIndustry.smd  BuildingsMisc.smd  BuildingsResidents.smd  Deposits.smd  Resources.smd  Units.smd
gameobjdefs/: BasicBuildings.smd  Deposits.smd  Resources.smd  TreeA.smd  Trees.smd  Units.smd  WoodIndustry.smd  Woodcutter.smd
resources/buildings/: Camp.mgv  ConstructionYardL1.mgv  Gatherer.mgv  Hut.mgv  Sawmill.mgv  Sawmill.mtl  Stoneminer.mgv  StoragePitLarge.mgv  StoragePitSmall.mgv  Thatcher.mgv  Woodcutter.mgv  Woodcutter.mtl
resources/deposits/: BushA.mgv  BushB.mgv  BushC.mgv  ReedsA.mgv  ReedsB.mgv  ReedsC.mgv  (+7 more)
shaders/: VoxelGS.glsl
src/: BlueprintFileHelper.h  Building.cpp  Building.h  BuildingUnderConstructRenderable.cpp  BuildingUnderConstructRenderable.h  GameObjectDefFileHelper.h  Grid.cpp  Grid.h  GridMapAStar.cpp  GridMapAStar.h  GridMapHandler.cpp  GridMapHandler.h  GridMapHandlerBase.cpp  GridMapHandlerBase.h  HUDHandler.cpp  HUDHandler.h  PauseMenuHandler.cpp  Resource.cpp  Resource.h  ResourceStorage.cpp  ResourceStorage.h  Resources.h  SMActorCommand.h  SMGameActor.cpp  SMGameActor.h  SMGameContext.cpp  SMGameContext.h  SMGameObjectFactory.cpp  SMGameObjectFactory.h  SMGameSaveLoad.cpp  SMGameSaveLoad.h  SMInputHandler.cpp  SMInputHandler.h  SMMainMenuContext.cpp  SMMainMenuContext.h  SMObserverItem.cpp  SMObserverItem.h  SMSettings.cpp  SMSettings.h  SaveLoadDlg.cpp  (+15 more)
(+94 files in other folders)
